--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,13 +3,13 @@ log:
 
 http_api_server:
   host: 0.0.0.0
-  port: 8080
+  port: &http_api_server_port 8080
 
 dns_sd:
   service_name: "data-pipelines-worker"
   service_type: "_http._tcp."
   service_domain: "local."
-  service_port: 8080
+  service_port: *http_api_server_port
   version: "0.1"
   load: ""
   available: no
