Added new Block image_add_text with unit tests. Added Block Config section and it's parsing. .TODO:Two Workers Processing via test cases

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -56,7 +56,10 @@ blocks:
     detector:
       check_interval: 1m
       conditions:
-        libraries: ["imagemagick", "ffmpeg"]
+        libraries: []
     reliability:
       policy: "none"
+    config:
+      font: /System/Library/Fonts/Supplemental/Courier New Bold.ttf
+      font_size: 50
   
