--- a/config/config.yaml
+++ b/config/config.yaml
@@ -64,3 +64,15 @@ blocks:
       font_size: 50
       font_color: "#000000"
       text_position: "center-center"
+    
+  image_resize:
+    detector:
+      check_interval: 60m
+      conditions:
+        libraries: []
+    reliability:
+      policy: "none"
+    config:
+      width: 100
+      height: 100
+      keep_aspect_ratio: true
