Added fonts and supported fonts in image_add_text block

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -60,7 +60,7 @@ blocks:
     reliability:
       policy: "none"
     config:
-      font: /System/Library/Fonts/Supplemental/Courier New Bold.ttf
+      font: "Roboto-Regular.ttf"
       font_size: 50
       font_color: "#000000"
       text_position: "center-center"
