OpenAI Config token can be received from env variable as well as config file ( env variable has priority )

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -28,6 +28,7 @@ pipeline:
 
 openai:
   openai_credentials_path: "./openai_credentials.json"
+  env_var_name: "OPENAI_API_KEY"
 
 blocks:
   http_request:
