--- a/config/config.yaml
+++ b/config/config.yaml
@@ -46,7 +46,6 @@ blocks:
     detector:
       check_interval: 1m
       conditions:
-        url: https://api.openai.com
     reliability:
       policy: "exponential_backoff"
       max_retries: 5
@@ -55,6 +54,22 @@ blocks:
     config:
       model: "gpt-4o"
       prompt: "Hello ChatGPT, how are you?"
+
+  openai_tts_request:
+    detector:
+      check_interval: 1m
+      conditions:
+    reliability:
+      policy: "exponential_backoff"
+      max_retries: 5
+      retry_delay: 1
+      retry_codes: [500, 502, 503, 504]
+    config:
+      model: "tts-1"
+      text: "Hello ChatGPT, how are you?"
+      voice: "alloy"
+      response_format: "mp3"
+      speed: 1.0
 
   image_add_text:
     detector:
