--- a/config/config.yaml
+++ b/config/config.yaml
@@ -61,16 +61,22 @@ blocks:
       check_interval: 1m
       conditions:
     reliability:
-      policy: "exponential_backoff"
-      max_retries: 5
-      retry_delay: 1
-      retry_codes: [500, 502, 503, 504]
     config:
       model: "tts-1"
       text: "Hello ChatGPT, how are you?"
       voice: "alloy"
       response_format: "mp3"
       speed: 1.0
+  
+  openai_image_request:
+    detector:
+      check_interval: 1m
+      conditions:
+    reliability:
+    config:
+      quality: "standard"
+      size: "1024x1024"
+      style: "natural"
 
   image_add_text:
     detector:
